latte/tests/bad/type/expr/call.lat
void f() {}

int main() {
  return 2 + f();
}
